<resources>
    <string name="app_name" translatable="false">To Do Reminder</string>
    <string name="activity_about_toolbar_title">About</string>
    <string name="activity_about_app_name" translatable="false">To Do Reminder</string>
    <string name="activity_about_version">Version %1$s</string>
    <string name="activity_home_toolbar_title">Tasks</string>
    <string name="activity_home_tab_unprogrammed">UNSCHEDULED</string>
    <string name="activity_home_tab_location_based">LOCATION-BASED</string>
    <string name="activity_home_tab_programmed">SCHEDULED</string>
    <string name="activity_home_tab_done">DONE</string>
    <string name="menu_home_action_settings">Settings</string>
    <string name="menu_home_action_sort">Sort</string>
    <string name="menu_home_action_about">About</string>
    <string name="activity_task_title">Task detail</string>
    <string name="menu_activity_task_action_edit">Edit</string>
    <string name="menu_activity_task_action_delete">Delete</string>
    <string name="menu_activity_task_subtitle_attachments">Attachments</string>
    <string name="activity_task_snackbar_error_no_task">No task specified. Closing</string>
    <string name="activity_task_snackbar_error_deleting_task">Could not delete task</string>
    <string name="activity_task_snackbar_error_updating_task">Could not update task</string>
    <string name="activity_task_snackbar_task_deleted_successfully">Task deleted successfully</string>
    <string name="fragment_location_based_reminder_detail_snackbar_error_no_reminder">No reminder specified. Closing</string>
    <string name="activity_task_overdue_since">Overdue since %1$s at %2$s</string>
    <string name="activity_task_dialog_delete_title">Delete task?</string>
    <string name="activity_task_dialog_delete_message">Are you sure you want to delete this task? This action cannot be undo</string>
    <string name="activity_task_dialog_delete_positive">Delete</string>
    <string name="activity_task_dialog_delete_negative">Cancel</string>
    <string name="fragment_detail_reminder_one_time_date_title">Date</string>
    <string name="fragment_detail_reminder_one_time_time_title">Time</string>
    <string name="fragment_detail_reminder_repeating_date_title">Start</string>
    <string name="fragment_detail_reminder_repeating_time_title">Time</string>
    <string name="fragment_detail_reminder_repeating_repeat_title">Repeat</string>
    <string name="fragment_detail_reminder_repeating_next_title">Next event</string>
    <string name="activity_place_list_title">Manage Places</string>
    <string name="activity_place_list_no_items">There are no places. Click the + button to add one</string>
    <string name="activity_place_title_new">New Place</string>
    <string name="activity_place_title_edit">Edit Place</string>
    <string name="menu_activity_place_action_delete">Delete</string>
    <string name="menu_activity_place_action_save">Save</string>
    <string name="activity_place_snackbar_help">Tip: Long-press map to add a point</string>
    <string name="activity_place_snackbar_save_succesful">Place successfully saved</string>
    <string name="activity_place_snackbar_edit_succesful">Place successfully updated</string>
    <string name="activity_place_snackbar_delete_succesful">Place successfully deleted</string>
    <string name="activity_place_snackbar_error_saving">There was an error saving the Place</string>
    <string name="activity_place_snackbar_error_deleting">There was an error deleting the Place</string>
    <string name="activity_place_snackbar_error_no_place">No Place. Search it or long-click map</string>
    <string name="activity_place_snackbar_error_no_alias">Please set an Alias for the Place</string>
    <string name="activity_place_snackbar_fetching_address">Fetching address of selected place</string>
    <string name="activity_place_snackbar_error_fetching_address">There was an error fetching the address</string>
    <string name="activity_place_dialog_exit_title">Go back?</string>
    <string name="activity_place_dialog_exit_message">Go back and discard changes?</string>
    <string name="activity_place_dialog_exit_positive">Yes</string>
    <string name="activity_place_dialog_exit_negative">Cancel</string>
    <string name="activity_place_dialog_delete_with_associated_tasks_title">Delete Place?</string>
    <string name="activity_place_dialog_delete_with_associated_tasks_message">WARNING: This place is currently used by some Tasks, delete anyway?</string>
    <string name="activity_place_dialog_delete_with_associated_tasks_positive">Delete</string>
    <string name="activity_place_dialog_delete_with_associated_tasks_negative">Cancel</string>
    <string name="activity_place_dialog_delete_title">Delete Place?</string>
    <string name="activity_place_dialog_delete_message">Are you sure you want to delete this Place?</string>
    <string name="activity_place_dialog_delete_positive">Delete</string>
    <string name="activity_place_dialog_delete_negative">Cancel</string>
    <string name="activity_place_alias_hint">Set an alias</string>
    <string name="activity_place_search_hint">Search here</string>
    <string name="activity_place_custom_name">Custom name?</string>
    <string name="activity_place_custom_name_hint">Enter a name for this place</string>
    <string name="activity_settings_toolbar_title">Settings</string>
    <string name="settings_category_settings_title">Settings</string>
    <string name="settings_category_about_title">About</string>
    <string name="settings_manage_places_key" translatable="false">todo_settings_manage_places</string>
    <string name="settings_manage_places_title">Manage Places</string>
    <string name="settings_manage_places_summary">Add or remove Places for Location-based Reminders</string>
    <string name="settings_date_format_key" translatable="false">todo_settings_date_format</string>
    <string name="settings_date_format_title">Date Format</string>
    <string name="settings_time_format_key" translatable="false">todo_settings_time_format</string>
    <string name="settings_time_format_title">Time Format</string>
    <string name="settings_trigger_minutes_before_notification_key" translatable="false">todo_settings_trigger_minutes_before_notification</string>
    <string name="settings_trigger_minutes_before_notification_title">Show notifications..</string>
    <string name="settings_trigger_minutes_before_notification_summary_single">%1$d minute before time</string>
    <string name="settings_trigger_minutes_before_notification_summary">%1$d minutes before time</string>
    <string name="settings_backup_key" translatable="false">todo_settings_backup</string>
    <string name="settings_backup_title">Backup data</string>
    <string name="settings_backup_summary">Backup app data to SD card</string>
    <string name="settings_restore_key" translatable="false">todo_settings_restore</string>
    <string name="settings_restore_title">Restore data</string>
    <string name="settings_restore_summary">Restore app data from SD card</string>
    <string name="settings_about_key" translatable="false">todo_settings_about</string>
    <string name="settings_about_title">About</string>
    <string name="settings_about_summary">Check app version, developer info&#8230;</string>
    <string name="settings_triggered_task_list_key" translatable="false">todo_settings_triggered_task_list_key</string>
    <string name="activity_task_toolbar_title_new">New Task</string>
    <string name="activity_task_toolbar_title_edit">Edit Task</string>
    <string name="menu_activity_task_action_save">SAVE</string>
    <string name="activity_task_snackbar_error_saving">There was an error saving the Task</string>
    <string name="activity_task_snackbar_save_successful">Task saved successfully</string>
    <string name="activity_task_snackbar_error_no_title">Please add a title to the Task</string>
    <string name="activity_task_one_time_snackbar_error_invalid_date">Please add a valid date</string>
    <string name="activity_task_one_time_snackbar_error_invalid_time">Please add a valid time</string>
    <string name="activity_task_repeating_snackbar_error_invalid_date">Please add a valid date</string>
    <string name="activity_task_repeating_snackbar_error_invalid_time">Please add a valid time</string>
    <string name="activity_task_repeating_snackbar_error_invalid_interval">Please add a valid repeating interval</string>
    <string name="activity_task_repeating_snackbar_error_invalid_number_events">Please add a valid number of events</string>
    <string name="activity_task_repeating_snackbar_error_invalid_end_date">Please add a valid end date</string>
    <string name="activity_task_repeating_snackbar_error_end_date_before_date">End date must be after reminder date</string>
    <string name="activity_task_location_based_snackbar_error_set_entering_exiting">Please set either Entering, Exiting or both</string>
    <string name="activity_task_fragment_task_tab_title">Task</string>
    <string name="activity_task_fragment_reminder_tab_title">Reminder</string>
    <string name="activity_task_exit_dialog_title">Discard task?</string>
    <string name="activity_task_exit_dialog_message">Go back and discard Task?</string>
    <string name="activity_task_exit_dialog_positive">Yes</string>
    <string name="activity_task_exit_dialog_negative">Cancel</string>
    <string name="activity_task_warn_no_reminder_dialog_title">Task has no reminder</string>
    <string name="activity_task_warn_no_reminder_dialog_message">Add a reminder to this task or save as-is?</string>
    <string name="activity_task_warn_no_reminder_dialog_positive">Save As-is</string>
    <string name="activity_task_warn_no_reminder_dialog_negative">Add Reminder</string>
    <string name="activity_task_save_dialog_title">Save?</string>
    <string name="activity_task_save_dialog_message">Save this task?</string>
    <string name="activity_task_save_dialog_positive">Save</string>
    <string name="activity_task_save_dialog_negative">Cancel</string>
    <string name="fragment_task_title_label">Title</string>
    <string name="fragment_task_title_hint">Add a title</string>
    <string name="fragment_task_category_label">Category</string>
    <string name="fragment_task_description_label">Description</string>
    <string name="fragment_task_description_hint">Add a description</string>
    <string name="fragment_task_tap_to_add_attachment_hint">Tap to add attachments</string>
    <string name="fragment_task_header_basic_info">Basic Info</string>
    <string name="fragment_task_header_attachments">Attachments</string>
    <string name="fragment_task_no_items">No attachments</string>
    <string name="fragment_task_snackbar_notice_attachments_options_hint">Long-press an attachment for more options</string>
    <string name="fragment_reminder_reminder_type">Reminder type</string>
    <string name="fragment_reminder_no_places_dialog_title">There are no Places</string>
    <string name="fragment_reminder_no_places_dialog_message">You need to create at least one Place to add a Location-based Reminder</string>
    <string name="fragment_reminder_no_places_dialog_positive">Create Place</string>
    <string name="fragment_reminder_no_places_dialog_negative">Cancel</string>
    <string name="fragment_edit_one_time_reminder_date_title">Date</string>
    <string name="fragment_edit_one_time_reminder_date_hint">Enter a date</string>
    <string name="fragment_edit_one_time_reminder_time_title">Time</string>
    <string name="fragment_edit_one_time_reminder_time_hint">Enter a time</string>
    <string name="fragment_edit_repeating_reminder_date_title">Date</string>
    <string name="fragment_edit_repeating_reminder_date_hint">Enter a date</string>
    <string name="fragment_edit_repeating_reminder_time_title">Time</string>
    <string name="fragment_edit_repeating_reminder_time_hint">Enter a time</string>
</resources>