<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<PreferenceCategory android:title="@string/settings_category_settings_title"/>-->
    <Preference
        android:key="@string/settings_manage_places_key"
        android:title="@string/settings_manage_places_title"
        android:summary="@string/settings_manage_places_summary" />
    <ListPreference
        android:key="@string/settings_date_format_key"
        android:title="@string/settings_date_format_title"
        android:summary="%s"
        android:entryValues="@array/dateFormatEntries"
        android:defaultValue="PRETTY_DATE"/>
    <ListPreference
        android:key="@string/settings_time_format_key"
        android:title="@string/settings_time_format_title"
        android:summary="%s"
        android:entries="@array/timeFormatEntries"
        android:entryValues="@array/timeFormatEntryValues"
        android:defaultValue="FORMAT_24H"/>
    <ListPreference
        android:key="@string/settings_trigger_minutes_before_notification_key"
        android:title="@string/settings_trigger_minutes_before_notification_title"
        android:summary="%s"
        android:defaultValue="MINUTES_5"/>

    <Preference
        android:key="@string/settings_backup_key"
        android:title="@string/settings_backup_title"
        android:summary="@string/settings_backup_summary" />
    <Preference
        android:key="@string/settings_restore_key"
        android:title="@string/settings_restore_title"
        android:summary="@string/settings_restore_summary" />



    <PreferenceCategory android:title="@string/settings_category_about_title"/>
    <Preference
        android:key="@string/settings_about_key"
        android:title="@string/settings_about_title"
        android:summary="@string/settings_about_summary"/>

</PreferenceScreen>